tests/compError/extraField.ucl
// compError
// error: field 'extraField' should not exist
// tests/compError/extraField.ucl:13 -> field here

const Vec2 = struct {
	field x: Number;
	field y: Number;
};

var vec2 = Vec2 {
	.x = 1;
	.y = 2;
	.extraField = 3;
};